# setup

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality.yml
src/: dummy_python_file.py
