[tool.poetry]
name = "setup"
version = "0.1.0"
description = ""
authors = ["Oliver Burkhard <oliver.burkhard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.5.0"
pylint = "^3.0.2"
ruff = "^0.1.5"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "D", "PL", "ARG", "PTH", "ERA", "PD", "PGH", "TCH", "TID", "SIM", "RET", "RSE", "Q", "PT", "PYI"]
ignore = ["D211", "D213"]